--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/miloscane/Infinitum-It-Website/issues"
   },
-  "homepage": "https://github.com/miloscane/Infinitum-It-Website#readme"
+  "homepage": "https://github.com/miloscane/Infinitum-It-Website#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2"
+  }
 }
